	- Very crude and basic map drawing with no textures. (Solid colors)
	- Added area at bottom for UI. Gamescreen is now split into the game's "board" and "info" sections.
	- Some kind of base class for info UI manipulation
	- Proposal UI storyboards

6/4/2014 - Remi
	- Map scrolling
	- Terrain info based on cursor position
	- Added temp character portrait of Kaga <3
	- Fixed event handling to process diagonal/multi-key inputs
	- Minimap
	- Minimap scrolling
	- Added stats display and whatnot
	- Added displaying (horrible) sprites of kanmusu
	- Kanmusu are now movable. (But buggy)(Can stack)
	- Kanmusu don't stack by accident now wheee

6/5/2014 - Remi
	- Kanmusu's movable distance limited by speed stat.
	- When moving kanmusu, movable tiles are highlighted blue
	- When moving kanmusu, unmovable tiles are highlighted red
	- Changed how tiles are handled internally to allow versatility and modulabiilty

6/14/2014 - Remi
	- Mostly resource gathering. Added all sounds and images of all kanmusu. (500mb!)

6/15/2014 - Remi
	- Added music. Currently uses battle theme in game in-loop and some basic sound effects. Amazing how much of a different it makes.
	- Added enemy vessels. Wo, Re and Ru.

6/16/2014 - Remi
	- Added context menu. Battle function still not implemented.

6/21/2014 - Remi
	- Teehee forgot to update the changelog for the past couple of days.
	- Added battle animation (Unfinished, but mostly there)
	- Added character voice loading from sounds.py. Will only load voices of kanmusu you have in your fleet.
	- Changed how set_vol works so it just cycles through the __dict__... Not sure why I didn't think of that before.

6/23/2014 - Remi
	- Teehee forgot yesterday's changelog.
	- Fully implemented tick-based turn mechanic.
	- Added attack range.
	- Added attack range overlay
	- Polished up misc backend stuff here and there.

6/24/2014 - Remi
	- Enemies are now impassable
	- Started (?) AI work.

6/25/2014 - Remi
	- Implemented Fog of War